Thu Apr  4 21:01:11 2002  Carlos O'Ryan  <coryan@atdesk.com>

	* ace/SOCK_Dgram.cpp:
	  I accidentally left out some code in my last change, without it
	  platforms that lack IPV6 support will probably break. Whoopsie.

Thu Apr  4 20:39:51 2002  Carlos O'Ryan  <coryan@atdesk.com>

	* bin/g++dep:
	  Remove bogus path(s) to find gcc, they were site-specific,
	  host-specific and version-specific, and then outdated at
	  that. The developer better has a decent version of gcc in her
	  PATH already, or the 'make depend' commands simply won't work.

Thu Apr  4 13:17:52 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/auto_run_tests.lst: Added a new test to the list of tests
	  that need to be run.

Thu Apr  4 11:52:45 2002  Carlos O'Ryan  <coryan@atdesk.com>

	* ace/SOCK_Dgram.cpp:
	  Add support for anonymous PF_LOCAL/SOCK_DGRAM (aka
	  PF_UNIX/SOCK_DGRAM) sockets.  As the class stood before these
	  changes it was impossible to create such sockets, forcing people
	  to choose a binding address even for sockets that are used only
	  to send messages.  For PF_INET this is not a big deal, because
	  the OS (or ACE::bind_port) can choose a port for the
	  application.  But there is no such luck for PF_LOCAL sockets,
	  where the application has to choose a filename for the socket,
	  functions like ACE_OS::tempnam() or ACE_OS::mktemp() are more
	  trouble than they are worth, as they open a security can of
	  worms.
	  This fixes bug 1179.

Thu Apr  4 10:30:54 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/RMCast/Makefile:
	* ace/SSL/Makefile:
	* ace/Makefile: Updated dependency. Other directories need this
	  too. Will get to them before the beta.

Thu Apr  4 11:05:48 2002  Carlos O'Ryan  <coryan@uci.edu>

	* ace/Select_Reactor_Base.cpp:
	  Apply proposed patch for bug 1175, i.e. a possible deadlock
	  condition when ACE_HAS_REACTOR_NOTIFICATION_QUEUE is defined.

Thu Apr  4 08:32:26 UTC 2002  Don Hinton  <dhinton@ieee.org>
