@@ -1,3 +1,9 @@
+Fri Apr  5 08:51:12 2002  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * apps/Gateway/Peer/Peer.h:
+          Added missing explicit template instantion exports for msvc7.
+          Thanks to Tom Phan <tomp@telhub.com> for reporting this
+
 Thu Apr  4 21:01:11 2002  Carlos O'Ryan  <coryan@atdesk.com>
 
 	* ace/SOCK_Dgram.cpp:
