@@ -1489,7 +1489,7 @@ Jeff Paciga <jmpaciga@uwaterloo.ca>
 Laurent Sabourin <lsabourin@interstarinc.com>
 Frank Rybak <rybak@ll.mit.edu>
 Tim Iskander <timothy.j.iskander@lmco.com>
-Michele Amoretti <amoretti@CE.UniPR.IT> 
+Michele Amoretti <amoretti@CE.UniPR.IT>
 Ido Yellin <Ido.Yellin@Focusengine.com>
 Eric Page <Eric_S_Page@raytheon.com>
 Kevin Heifner <heifner_k@ociweb.com>
@@ -1497,6 +1497,7 @@ James Haiar <haiar@ll.mit.edu>
 Pavel Repin <pavel@repin.com>
 Whitney Kew <Whitney.Kew@Invensys.com>
 Jaroslaw Nozderko <jareknz@polbox.com>
+Tom Phan <tomp@telhub.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
